--- a/src/components/TaskList/TaskList.style.scss
+++ b/src/components/TaskList/TaskList.style.scss
@@ -26,7 +26,8 @@
     padding: 0 var(--default-padding);
     height: 5.4rem;
 
-    &:hover {
+    &:hover,
+    &:focus-within {
       //background-color: #ececec;
       background-color: var(--color-task-hover);
 
@@ -66,6 +67,8 @@
     padding: var(--default-padding);
     padding-right: calc(var(--default-padding) / 2);
     transition: all var(--timing-animation);
+    position: relative;
+    z-index: 1;
   }
 
   &__valueInput {
@@ -77,6 +80,22 @@
     width: 100%;
     background-color: var(--color-white);
     height: 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    &:focus {
+      z-index: 1;
+      opacity: 2;
+
+      & + .TaskList__value {
+        z-index: -1;
+        opacity: 0;
+      }
+    }
   }
 
   &__checkbox {
@@ -105,5 +124,15 @@
     visibility: hidden;
     transition: all var(--timing-animation);
     cursor: pointer;
+  }
+}
+
+
+input[type="checkbox"] {
+  width: 24px;
+  height: 24px;
+
+  &:focus {
+    box-shadow: 0 0  3px 5px #000;
   }
 }
